
2007-04-11  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* doc/xvidcap/it/figures/prefs-general.png: Updated
		image for Italian documentation
	* Doxyfile, configure.in, src/gnome-xvidcap.glade,
		debian: changelog, rules: version bump to
		1.1.5rc3

2007-04-11  Vincenzo Reale <smart2128@baslug.org>
	* po/it.po, doc: man/it/xvidcap.1-it.po,
		xvidcap/it/xvidcap.xml-it.po,
		xvidcap/it/xvidcap.xml, man/it/xvidcap.1.xml,
		man/it/xvidcap.1: Italian translation

2007-04-10  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* debian/control: added build dependencies
	* src: capture.c, gnome_frame.c: cosmetics
	* src/gnome-xvidcap.glade: make frame dimenstions
		display sensitive
	* doc: xmldocs.make, man/C/xvidcap.1, man/man.make, 
		man/de/xvidcap.1.xml, man/de/xvidcap.1, 
		man/it/xvidcap.1.xml, man/it/xvidcap.1, 
		xvidcap/C/xvidcap.xml, 
		xvidcap/de/xvidcap.xml-de.po, 
		xvidcap/de/xvidcap.xml, 
		xvidcap/it/xvidcap.xml-it.po, 
		xvidcap/it/xvidcap.xml: more updates to
		i18n and its build process (forgot -a
		switch to xml2po in some places)

2007-04-09  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/gnome-xvidcap.glade, po/en.po, po/es.po, 
		po/de.po, po/it.po, doc: man/C/xvidcap.1.xml, 
		man/C/xvidcap.1.xml.pot, man/de/xvidcap.1-de.po, 
		man/it/xvidcap.1-it.po, 
		xvidcap/C/figures/prefs-general.png, 
		xvidcap/C/xvidcap.xml, xvidcap/C/xvidcap.xml.pot, 
		xvidcap/de/xvidcap.xml-de.po, 
		xvidcap/de/figures/prefs-general.png, 
		xvidcap/de/xvidcap.xml, 
		xvidcap/it/xvidcap.xml-it.po: i18n
		and docs plus their i18n (done for C and
		de, prepared for others)

2007-04-06  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/gnome_frame.c: only allow resize of frame
		through dragging when not recording, 
		also increase the duration the frame
		dimensions are displayed

2007-04-03  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: control.h, gnome_warning.c, gnome_ui.c, 
		app_data.h, gnome_frame.c, gnome_options.c, 
		gnome_frame.h, gnome-xvidcap.glade: